[project]
name = "flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairseq2>=0.4.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "notebook>=7.4.2",
    "sonar-space>=0.4.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
]
